Part 3/3.2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-writer-reader
  namespace: pingpong-writer-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-writer-reader
  template:
    metadata:
      labels:
        app: pingpong-writer-reader
    spec:
      containers:
        - name: pingpong-reader
          image: jc40/pingpong-reader:4.0.5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
        - name: pingpong-writer
          image: jc40/pingpong-writer:4.0.1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4000
