Part 3/3.2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-writer-reader-svc
  namespace: pingpong-writer-reader
  annotations:
    cloud.google.com/backend-config: '{"ports": {
    "pingpong":"http-hc-config-writer",
    "logoutput":"http-hc-config-reader"
    }}'

spec:
  type: NodePort
  selector:
    app: pingpong-writer-reader
  ports:
    - name: pingpong
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: logoutput
      port: 2346
      protocol: TCP
      targetPort: 4000
