Part 3/3.2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-writer-reader-ingress
  namespace: pingpong-writer-reader
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pingpong-writer-reader-svc
            port:
              number: 2346
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-writer-reader-svc
            port:
              number: 2345
